# repulp

./: .gitignore  .repulp.example.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
samples/: api-docs.html  architecture.html  changelog.html  employee-directory.csv  inventory.csv  meeting-notes.html  report.html  research-paper.html  sales-data.csv
samples/converted/: api-docs.md  architecture.md  changelog.md  employee-directory.md  inventory.md  meeting-notes.md  report.md  research-paper.md  sales-data.md
src/repulp/: __init__.py  cache.py  cleaner.py  cli.py  config.py  converter.py  engine.py  extractor.py  fetcher.py  formatter.py  frontmatter.py  watcher.py
tests/: test_api.py  test_cache.py  test_cleaner.py  test_cli.py  test_cli_batch.py  test_config.py  test_converter.py  test_engine.py  test_extractor.py  test_fetcher.py  test_formatter.py  test_frontmatter.py  test_integration.py  test_table_extraction.py  test_watcher.py
tests/fixtures/: sample.html
